[package]
name = "aoc-2018"
version = "0.1.0"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
edition = "2018"
description = "Advent of Code 2018"

[dependencies]
itertools = "0.7"
lazy_static = "1.2.0"
regex = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
